+facebook login + tab control

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_home">Home</string>
+    <string name="facebook_app_id">958300420905296</string>
 </resources>
